crates/aranya-policy-lang/tests/data/invalid_text/real_nul_byte.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid string
  |
1 | let x = "a␀b"
  |           ^ string contains null byte
